# bdk-flutter-bridge

android/: gradle.properties
native/: Cargo.toml
native/lib/: bridge_generated.dart
native/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs
